@startuml
'https://plantuml.com/class-diagram

abstract class KeHoachHocTap{
    - String ten
    + {abstract} add(KeHoachChung k)
    + {abstract} remove(KeHoachChung k)
    + {abstract} int soTC()
    + {abstract} int HocPhi()
    + {abstract} String thongTin()
}
KeHoachHocTap <|-- MonHoc
KeHoachHocTap <|---* KeHoachChung
KeHoachChung *--->"*" KeHoachHocTap: list

note left of KeHoachChung
    Cài đặt chung cho: Kỳ học, năm học, khoá học
end note

class MonHoc{
    int soTC
    int hocPhiTC
}

class KeHoachChung{
    int soTC()
}
note right of KeHoachChung::soTC
    t = 0
    Duyet qua cac (KeHoachChung k) trong list:
        t = t + k.soTC();
    return t;
end note
@enduml